SSLContext hack, docker image, minor fix for geth node start up to allow cross-container hostname support